<resources>
    <string name="app_name">NCS</string>

    <string name="kakao_app_key">9605646964010fce1ec857cacb46d08b</string>
    <string name="kakao_rest_key">0f1893776abf2a59938fbb2df9c478c2</string>
    <string name="kakao_admin_key">dea3ac879015f4932333c8fbb75520a8</string>

    <string name="youtube_api_key">AIzaSyA3jnBUpemCWniNiaL-tIf7B-ZcC84CDe8</string>

    //////////////////////////////////////////

    <string name="app_name_kr">세상의 모든 청소</string>

    <string name="default_address">서울 중구 태평로1가 31</string>
    <string name="pay_date">결제 날짜 :</string>
    <string name="price">결제 금액 :</string>
    <string name="pay_option">결제 방법 :</string>
    <string name="google_pay">구글페이</string>
    <string name="kakao_pay">카카오페이</string>
    <string name="pay">무통장입금</string>
    <string name="pay_name">입금자명 :</string>

    <string name="between6">※오후 6시부터 오전 6시까지는 50% 추가비용이 적용됩니다</string>

    <string name="ab_home_title">세상의 모든 청소</string>
    <string name="ab_home_first_title">안내</string>
    <string name="ab_map_title">주소</string>
    <string name="ab_address_title">주소</string>
    <string name="ab_calendar_title">일정</string>
    <string name="ab_check_title">예약</string>
    <string name="ab_area_title">면적</string>
    <string name="ab_info_title">연락하기</string>
    <string name="ab_sign_in_title">로그인</string>
    <string name="ab_sign_in_title_en">Sign In</string>
    <string name="ab_sign_up_title">회원가입</string>
    <string name="ab_sign_up_title_en">Sign Up</string>
    <string name="ab_chat_title">메신저</string>

    <string name="need_sign_in">로그인 후 이용이 가능합니다</string>

    <string name="bt_enter">확인</string>
    <string name="nickname">닉네임</string>

    <string name="bt_reservation">청소 예약하기</string>
    <string name="reservation_list">예약 현황</string>

    <string name="bt_input_address_detail">상세주소 입력하기</string>
    <string name="address_search">주소를 검색하세요</string>
    <string name="address_detail">상세주소를 입력하세요</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>

    <string name="phone_number">휴대폰번호</string>
    <string name="phone_number_2">연락처</string>
    <string name="id">아이디</string>
    <string name="id_text">영문 + 숫자 6 ~ 16자리</string>

    <string name="password">비밀번호</string>
    <string name="password_text">6 ~ 16자리</string>
    <string name="password2">비밀번호 재확인</string>
    <string name="password2_text">비밀번호를 한번더 입력하세요</string>
    <string name="password_wrong">비밀번호가 일치하지 않습니다</string>
    <string name="password_right">비밀번호가 일치합니다</string>

    <string name="bt_find_password">비밀번호 찾기</string>

    <string name="verification_code">인증번호</string>
    <string name="verification_code_text">인증번호를 입력후 확인을 눌러주세요</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="sign_up">회원가입</string>

    ////////////////////////////////////////
    <string name="home_1_1">이사 청소</string>
    <string name="home_1_2">평당 10,000원</string>
    <string name="home_2_1">입주 청소</string>
    <string name="home_2_2">평당 10,000원</string>
    <string name="home_3_1">사무실 청소</string>
    <string name="home_3_2">무료 견적</string>
    <string name="home_4_1">계단 청소</string>
    <string name="home_4_2">무료 견적</string>


    ////////////reservation////////////////
    <string name="reservation_hint_calender">날짜를 선택해 주세요.</string>
    <string name="reservation_hint_location">주소를 입력해 주세요.</string>
    <string name="reservation_hint_cleaner">클리너를 선택해 주세요.</string>
    <string name="title_activity_map">Map</string>

    <string name="business_license">
        세상의모든청소\n대표이사 : 김철수\n대표번호 : 5555-5555\n사업자등록번호 : 111-22-33333\n주소 : 서울특별시 중구 태평로1가 31
    </string>

    //////////housecleaning//////////
    <string name="ab_service_guide">서비스 안내</string>

    //이사청소
    <string name="home_first_title_1">진행안내</string>
    <string name="home_first_subtitle_1_1">방/거실</string>
    <string name="home_first_text_1_1">
        탈거 가능한 전등 커버 탈거 후 내부세척\n소방감지기, 환풍구, 동체감지기 먼지 제거\n몰딩 도배풀 및 먼지 제거\n천장을 포함한 모든 벽지 먼지 제거\n탈거 가능한 서랍 및 선반 탈거 후 먼지 제거\n스위치, 콘센트, 무선인터폰 등 먼지 제거\n마루/타일/장판 각 전용세제로 세척
</string>
    <string name="home_first_subtitle_1_2">주방</string>
    <string name="home_first_text_1_2">
        후드 및 가스레인지 기름기 및 오염 제거\n탈거 가능한 서랍 및 선반 탈거 후 오염 제거\n장 하부 먼지 및 이물질 제거\n싱크대 배수구 오염 제거 후 소독
    </string>
    <string name="home_first_subtitle_1_3">화장실</string>
    <string name="home_first_text_1_3">
        환풍구 제거 후 커버 및 내부 청소\n천장 및 벽 전체 전용세제로 세척\n탈거 가능한 서랍 및 선반 탈거 후 오염 제거\n욕조, 샤워기, 세면대, 변기 오염 제거\n배수구 내부 분해세척 및 소독
    </string>
    <string name="home_first_subtitle_1_4">베란다/다용도실</string>
    <string name="home_first_text_1_4">
        천장 및 벽 전체 먼지, 거미줄 제거\n전용세제로 바닥 세척\n배수구 내부 분해세척 및 소독
    </string>
    <string name="home_first_subtitle_1_5">창문/창틀</string>
    <string name="home_first_text_1_5">
        내부 유리 전면 전용 세제 세척\n창틀 전면 먼지 및 오염 제거
    </string>

    <string name="home_first_title_2">추가 작업</string>
    <string name="home_first_text_2_1">
        화장실 및 벽지 곰팡이 제거 작업\n유리/타일 벽면 스티커 제거 작업\n외부 유리 전용 세체 세척 작업\n악취 및 누진 제거 작업\n소독 및 방역 시공\n\n(※추가 작업은 추가비용이 발생하며 출장가신 팀장이 직접 안내해 드립니다)</string>


    //입주청소
    <string name="home_second_title_1">진행안내</string>
    <string name="home_second_subtitle_1_1">방/거실</string>
    <string name="home_second_text_1_1">
        탈거 가능한 전등 커버 탈거 후 내부세척\n소방감지기, 환풍구, 동체감지기 오염 제거\n몰딩 도배 풀 및 오염 제거\n천장을 포함한 모든 벽지 먼지 제거\n탈거 가능한 서랍 및 선반 탈거 후 오염 제거\n스위치, 콘센트, 무선인터폰 등 오염 제거\n마루/타일/장판 각 전용세제로 세척
    </string>
    <string name="home_second_subtitle_1_2">주방</string>
    <string name="home_second_text_1_2">
        후드 및 가스레인지 세척\n탈거 가능한 서랍 및 선반 탈거 후 먼지 제거\n장 하부 먼지 및 이물질 제거\n싱크대 배수구 이물질 제거 후 소독
    </string>
    <string name="home_second_subtitle_1_3">화장실</string>
    <string name="home_second_text_1_3">
        환풍구 제거 후 커버 및 내부 청소\n천장 및 벽 전체 전용세제로 세척\n탈거 가능한 서랍 및 선반 탈거 후 먼지 및 이물질 제거\n욕조, 샤워기, 세면대, 변기 먼지 및 이물질 제거\n배수구 내부 분해세척 및 소독</string>
    <string name="home_second_subtitle_1_4">베란다/다용도실</string>
    <string name="home_second_text_1_4">
        천장 및 벽 전체 먼지 제거\n전용세제로 바닥 세척\n배수구 내부 분해세척 및 소독
    </string>
    <string name="home_second_subtitle_1_5">창문/창틀</string>
    <string name="home_second_text_1_5">
       내부 유리 전면 전용세제 세척\n창틀 전면 먼지 및 오염 제거
    </string>

    <string name="home_second_title_2">추가 작업</string>
    <string name="home_second_text_2_1">
      새집증후군 제거\n유해물질 발생 가능한 모든 면 차폐 후 오존 산화\n마루 코팅\n줄눈 시공\n타일 및 화장실 내부 나노코팅\n(※추가 작업은 추가비용이 발생하며 출장가신 팀장이 직접 안내해 드립니다)</string>


    //사무실

    <string name="home_third_title">진행안내</string>
    <string name="home_third_text_1">
        엄선된 전문청소부가 매주 원하시는 횟수/요일에 출장하여 청소를 진행해드리는 서비스입니다\n견적 요청 시 무료출장 후 안내드립니다
    </string>

    //계단

    <string name="home_fourth_title">진행안내</string>
    <string name="home_fourth_text">
        엄선된 전문청소부가 매주 원하시는 횟수/요일에 출장하여 청소를 진행해드리는 서비스입니다\n견적 요청 시 무료출장 후 안내드립니다
    </string>


</resources>
