<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background2"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="3.0"
        android:shadowDy="3.0"
        android:shadowRadius="3.0"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="64dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sign_up"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="@string/id"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLength="16"
        android:padding="16dp"
        android:textAllCaps="false"
        android:textColor="@color/gray5" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_id"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="16dp"
        android:text="@string/id_text"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_id"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="16"
        android:padding="16dp"
        android:textColor="@color/gray5" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pw"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="16dp"
        android:text="@string/password_text"
        android:textColor="@color/red"
        android:textSize="12dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pw"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="@string/password2"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="16"
        android:padding="16dp"
        android:textColor="@color/gray5" />

    <TextView
        android:id="@+id/tv_pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pw2"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="16dp"
        android:text="@string/password_text"
        android:textSize="12dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pw2"
        android:layout_marginLeft="32dp"
        android:digits="0123456789"
        android:ems="11"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:lines="1"
        android:maxLength="11"
        android:padding="16dp"
        android:textColor="@color/gray5" />

    <Button
        android:id="@+id/bt_get_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/et_phone"
        android:layout_alignBottom="@id/et_phone"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@id/et_phone"
        android:background="@drawable/black_rounded_box"
        android:text="인증"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="16dp"
        android:text="휴대폰번호를 입력하세요"
        android:textSize="12dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_phone"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:digits="0123456789"
        android:ems="11"
        android:hint="@string/verification_code"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:lines="1"
        android:maxLength="10"
        android:padding="16dp"
        android:textColor="@color/gray5" />

    <TextView
        android:id="@+id/tv_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_verification"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="16dp"
        android:text="@string/verification_code_text"
        android:textSize="12dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bluegreen_rounded_box"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>